--- a/src/style/navigation.scss
+++ b/src/style/navigation.scss
@@ -13,14 +13,19 @@
         transition: 0.5s ease-in-out;
         
         a {
-            color: black;
+            color: $grey;
             text-decoration: none;
+            &:hover {
+                color: black;
+            }
+
         }
 
         &:hover {
+            color: black;
             border-bottom: 1px solid black;
         }
-        
+
     }
     
 }
