--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,8 @@
-@import './variables.scss';
-@import './mixins.scss';
-@import './base.scss';
-@import './button.scss';
-@import './navigation.scss';
+@import "./variables.scss";
+@import "./mixins.scss";
+@import "./base.scss";
+@import "./button.scss";
+@import "./navigation.scss";
 @import "./portfolio.scss";
+@import "./portfolio-manager.scss";
 @import "./auth.scss";
